# pytroll-watchers

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-sdist.yaml  python-package.yml
docs/source/: backends.rst  cli.rst  conf.py  index.rst  other_api.rst  published.rst  selector.rst
src/pytroll_watchers/: __init__.py  common.py  dataspace_watcher.py  datastore_watcher.py  dhus_watcher.py  fetch.py  local_watcher.py  main_interface.py  minio_notification_watcher.py  publisher.py  s3_poller.py  selector.py  testing.py
src/pytroll_watchers/backends/: __init__.py  local.py
tests/: dataspace_responses.yaml  datastore_responses.yaml  datastore_responses_geo.yaml  dhus_responses.yaml  test_bucket_notification_watcher.py  test_copernicus_dataspace_watcher.py  test_datastore.py  test_dhus.py  test_fetcher.py  test_local_watcher.py  test_main_interface.py  test_processing.py  test_publisher.py  test_s3.py  test_selector.py
