[project]
name = "pytroll-watchers"
version = "0.1.0"
description = "Utility functions and scripts to watch for new files on local or remote filesystems."
authors = [
    { name = "Martin Raspaud", email = "martin.raspaud@smhi.se" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.11"
license = {file = "LICENSE.txt"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pytroll_watchers"]
