[project]
name = "pytroll-watchers"
version = "0.1.0"
description = "Utility functions and scripts to watch for new files on local or remote filesystems."
authors = [
    { name = "Martin Raspaud", email = "martin.raspaud@smhi.se" }
]
dependencies = ["universal-pathlib", "trollsift"]
readme = "README.md"
requires-python = ">= 3.10"
license = {file = "LICENSE.txt"}

[project.urls]
"Documentation" = "https://pytroll-watchers.readthedocs.io/en/latest/"

[project.optional-dependencies]
minio = ["minio", "s3fs"]
local = ["watchdog"]
publishing = ["posttroll"]
ssh = ["paramiko"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pytroll_watchers"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules/
select = ["A", "B", "D", "E", "W", "F", "I", "N", "PT", "S", "TID", "C90", "Q", "T10", "T20"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # assert allowed in tests
"docs/source/conf.py" = ["D100", "A001"]  # sphinx misbihaving

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10
